--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/mic-761-1133883.png" />
+    <link rel="icon" href="https://i.pinimg.com/originals/17/86/a3/1786a3b606290f1646f2daa11024ab16.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Alan</title>
+    <title>HERMES</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
